# web_llm_interactor

./: --outut  .gitignore  .mcp.json.example  CLI_README.md  README.md  USAGE.md  bd-simple.js  cli.js  embedded_output.json  oklahoma_output.json  package.json  pyproject.toml  qwen_response_final.html  recommendations.md  run.js  sample_oklahoma.txt  send_message.applescript  test-proxy-format.js  test-proxy.js  test-query.js
_archive/: output.json  send_enter_save_source copy.applescript
_archive/applescript_version/: capture_response.applescript  clean_extractor.py  extract_embedded_json.py  extract_json_from_attr.py  extract_qwen_components.py  extract_text.py  llm_web_interactor.py  llm_web_interactor_simple.py  send_enter_save_source copy.applescript  simple_parser.py
_archive/claude_bork/: browser.py  image_processing_utils.py  main.py  paste_text.py  perplexity_cli.py  qwen_main.py  simple_ui_automation.py  site.py  text_paste_utils.py  vision_main.py
_archive/js/: bezier.js  brightdata-run.js  brightdata.js  browser.js  config.example.js  no-proxy-test.js  output-formatter.js  security-eval.js  security.js  test-formatter.js
_archive/misc_files/: FINDINGS.md  claude-hacker-system-prompt.md  run-claude-hacker.sh  system-prompt-hacker.md
_archive/playwright/: brightdata-diagnostics.js  simple-test.js  test-perplexity-access.js
_archive/python_cli_backup/: example_queries.txt  gui_automation.py  main.py  paste_text.py  qwen_main copy.py  qwen_main.py  requirements.txt  uv_paste.py  vision_main.py
_archive/requirements/: requirements_gui.txt  requirements_qwen.txt
_archive/simple-output/: page.html
bd-output/: navigation_error.txt
debug/: page_content.html
docs/: README.md  README_GUI.md  README_IMAGE_COMPRESSION.md  README_QWEN.md  README_TEXT_PASTE.md  README_VISION.md  brightdata-setup.md  output-formatter.md
examples/: .roomodes  image_processing_utils.py  index_brightdata.js  output-formatter-usage.js
html/: qwen_html_json_response.html  qwen_html_json_response.html_bs4_output.txt  qwen_html_json_response.html_html2text_output.txt  qwen_json_test.html  qwen_response_final.html  qwen_response_final_old.html  qwen_response_final_old.html_bs4_output.txt  qwen_response_final_old.html_html2text_output.txt
memory_bank/: ARANGODB_FUNCTION_CHANGES.md  ARANGODB_TROUBLESHOOTING.md  CLI_USAGE_UPDATE.md  CODE_PRINCIPALS.md  DEPENDENCY_MANAGEMENT.md  ENHANCED_LOGGING.md  GITGIT_REQUIREMENTS.md  JQ_USAGE.md  MCP.md  TASK_PLAN_GUIDE.md  TROUBLESHOOTING.md  VALIDATION_REQUIREMENTS.md
python_cli/: README.md  requirements.txt
scripts/: cleanup.sh  demo.sh  install_cpu.sh  install_cpu_torch.sh  install_cpu_uv.sh  install_intel_mac.sh  install_specific_torch.sh  install_system_torch.sh  paste_to_chat.scpt  paste_to_chat.sh  test_mps_intel.py
simple-output/: error.txt  input_elements.json  page.txt  response.txt  response_page.html
src/: __init__.py  brightdata.js  browser.js  config.js  extract_json_from_html.py  extract_qwen.py  html_parser.py  index.js  json_extractor.py  llm_html_parser.py  llm_parser.py  llm_web_interactor_simple2.py  logger.js  qwen_parser.py  send_enter_save_source.applescript  send_message.applescript  send_message_and_capture.applescript  simple_json_extractor.py  utils.js
test-output/: error.txt
tests/: run_integration_test.sh  test_cli_direct.sh  test_with_reset.sh
~/: .zshrc
(+74 files in other folders)
