[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web_llm_interactor"
version = "0.1.0"
description = "Agent CLI to access Web LLM Models without an API. Mac-Only."
authors = [
    {name = "Graham Anderson", email = "graham@grahama.co"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "typer>=0.15.3",
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "bleach>=6.1.0",
    "json-repair>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/grahama1970/web-llm-interactor"
"Bug Tracker" = "https://github.com/grahama1970/web-llm-interactor/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
]

[project.scripts]
web-llm-interactor = "web_llm_interactor.cli:app"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
